--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,18 +14,19 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: #f6f9ff;
-  color: #444444;
+  background: radial-gradient(circle at top left, #8e4bb2, #0d0015 80%);
+  color: #e8d9ff;
 }
 
 a {
-  color: #4154f1;
+  color: #c084f5;
   text-decoration: none;
+  transition: 0.3s;
 }
 
 a:hover {
-  color: #717ff5;
-  text-decoration: none;
+  color: #e0b3ff;
+  text-shadow: 0 0 15px #ff0080, 0 0 25px #7928ca, 0 0 35px #00d2ff;
 }
 
 h1,
@@ -388,16 +389,19 @@ h6 {
 .logo span {
   font-size: 26px;
   font-weight: 700;
-  color: #012970;
+  color: #d9b3ff;
   font-family: "Nunito", sans-serif;
+  text-shadow: 0 0 15px #ff0080, 0 0 25px #7928ca, 0 0 35px #00d2ff;
 }
+
 
 .header {
   transition: all 0.5s;
   z-index: 997;
   height: 60px;
-  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  box-shadow: 0 0 30px rgba(186, 104, 255, 0.4), 0 0 60px rgba(170, 85, 255, 0.2);
+background: radial-gradient(circle at top left, #3a0072, #1a0033 90%);
+
   padding-left: 20px;
   /* Toggle Sidebar Button */
   /* Search Bar */
@@ -444,7 +448,7 @@ h6 {
 .header .search-form input {
   border: 0;
   font-size: 14px;
-  color: #012970;
+  color: #70016e;
   border: 1px solid rgba(1, 41, 112, 0.2);
   padding: 7px 38px 7px 8px;
   border-radius: 3px;
@@ -625,8 +629,11 @@ h6 {
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #aab7cf transparent;
-  box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  box-shadow: 0px 0px 25px rgba(186, 104, 255, 0.3);
+background: linear-gradient(180deg, rgba(45, 0, 80, 0.95), rgba(25, 0, 50, 0.9));
+backdrop-filter: blur(12px);
+border-right: 1px solid rgba(200, 150, 255, 0.2);
+
 }
 
 @media (max-width: 1199px) {
@@ -713,9 +720,11 @@ h6 {
   color: #4154f1;
 }
 
+/* INI ADALAH TUILISAN SIDEBAR */
 .sidebar-nav .nav-link.collapsed {
-  color: #012970;
-  background: #fff;
+  color: #d8e6ff;       
+  /* tombol */
+  background: rgba(45, 0, 80, 0.95);
 }
 
 .sidebar-nav .nav-link.collapsed i {
