--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
+/* IMPORT BOOTSTRAP DULUAN */
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
+/* BARU TAILWIND */
 @import 'tailwindcss';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
